--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,12 +40,14 @@ set(SOURCES     src/main.cpp
                 src/Optimizer.cpp
                 src/DifferentialEvolution.cpp)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -lSDL2_ttf")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 INCLUDE(FindPkgConfig)
 PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
+
+#find_package(sdl2_ttf REQUIRED)
 
 INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES}
